chore: mise a jour pages projets

--- a/index.html
+++ b/index.html
@@ -708,7 +708,9 @@
                 </div>
                 <div class="skill-item">
                   <div class="flex justify-between mb-2">
-                    <span class="text-white font-medium">PostgreSQL / MySQL</span>
+                    <span class="text-white font-medium"
+                      >PostgreSQL / MySQL</span
+                    >
                     <span class="text-gray-300">70%</span>
                   </div>
                   <div class="w-full bg-white/20 rounded-full h-2">
@@ -1245,8 +1247,8 @@
                     <div
                       class="bg-green-500/90 text-white px-4 py-2 rounded-xl font-semibold text-center"
                     >
-                      <i class="fas fa-check mr-2" aria-hidden="true"></i
-                      >Projet terminé
+                      <i class="fas fa-check mr-2" aria-hidden="true"></i>Projet
+                      terminé
                     </div>
                     <a
                       href="projects/ape-la-croixille.html"
