--- a/projects/ape-la-croixille.html
+++ b/projects/ape-la-croixille.html
@@ -13,7 +13,10 @@
       content="APE La Croixille, association parents d'élèves, React, TypeScript, Node.js, Express, PostgreSQL, Sequelize, accessibilité WCAG"
     />
 
-    <link rel="canonical" href="https://auvielno.fr/projects/ape-la-croixille.html" />
+    <link
+      rel="canonical"
+      href="https://auvielno.fr/projects/ape-la-croixille.html"
+    />
 
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="fr_FR" />
@@ -117,7 +120,8 @@
           gestion d'événements.
         </p>
         <div class="flex flex-wrap justify-center gap-3">
-          <span class="px-4 py-2 bg-green-500/90 text-white rounded-xl font-semibold"
+          <span
+            class="px-4 py-2 bg-green-500/90 text-white rounded-xl font-semibold"
             ><i class="fas fa-check-circle mr-2"></i>Projet réalisé</span
           >
           <span class="px-4 py-2 bg-gray-700 text-white rounded-xl"
@@ -133,17 +137,19 @@
     <main class="py-12">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <section class="mb-12">
-          <h2 class="text-3xl font-bold text-gray-900 mb-6">À propos du projet</h2>
+          <h2 class="text-3xl font-bold text-gray-900 mb-6">
+            À propos du projet
+          </h2>
           <div class="prose prose-lg max-w-none">
             <p class="text-gray-700 leading-relaxed mb-4">
               APE La Croixille est une plateforme web développée pour
               l'Association des Parents d'Élèves de l'école de La Croixille.
-              L'objectif est de centraliser les informations importantes pour les
-              familles : événements, actualités et communication.
+              L'objectif est de centraliser les informations importantes pour
+              les familles : événements, actualités et communication.
             </p>
             <p class="text-gray-700 leading-relaxed">
-              Le projet inclut une partie publique claire et mobile-first,
-              ainsi qu'un espace administrateur sécurisé permettant la gestion
+              Le projet inclut une partie publique claire et mobile-first, ainsi
+              qu'un espace administrateur sécurisé permettant la gestion
               complète des contenus (articles, événements, catégories) avec une
               attention particulière portée à l'accessibilité. Le site a été
               développé gratuitement pour soutenir l'association locale.
@@ -152,136 +158,235 @@
         </section>
 
         <section class="mb-12">
-          <h2 class="text-3xl font-bold text-gray-900 mb-6">Technologies utilisées</h2>
+          <h2 class="text-3xl font-bold text-gray-900 mb-6">
+            Technologies utilisées
+          </h2>
           <div class="grid md:grid-cols-2 gap-6">
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <h3 class="text-xl font-bold text-gray-900 mb-4 flex items-center">
+              <h3
+                class="text-xl font-bold text-gray-900 mb-4 flex items-center"
+              >
                 <i class="fas fa-laptop-code text-gray-600 mr-3"></i>
                 Frontend
               </h3>
               <div class="flex flex-wrap gap-2">
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">React 18</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">TypeScript</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Vite</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">React Router</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Tailwind CSS</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Zustand</span>
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >React 18</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >TypeScript</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Vite</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >React Router</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Tailwind CSS</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Zustand</span
+                >
               </div>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <h3 class="text-xl font-bold text-gray-900 mb-4 flex items-center">
+              <h3
+                class="text-xl font-bold text-gray-900 mb-4 flex items-center"
+              >
                 <i class="fas fa-server text-gray-600 mr-3"></i>
                 Backend
               </h3>
               <div class="flex flex-wrap gap-2">
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Node.js</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Express.js</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">PostgreSQL</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Sequelize</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">JWT</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">REST API</span>
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Node.js</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Express.js</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >PostgreSQL</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Sequelize</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >JWT</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >REST API</span
+                >
               </div>
             </div>
           </div>
         </section>
 
         <section class="mb-12">
-          <h2 class="text-3xl font-bold text-gray-900 mb-6">Fonctionnalités principales</h2>
+          <h2 class="text-3xl font-bold text-gray-900 mb-6">
+            Fonctionnalités principales
+          </h2>
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-newspaper text-gray-700 text-xl"></i>
               </div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">Actualités & articles</h3>
+              <h3 class="text-lg font-bold text-gray-900 mb-2">
+                Actualités & articles
+              </h3>
               <p class="text-gray-600 text-sm">
-                Publication et organisation des contenus avec catégories dédiées.
+                Publication et organisation des contenus avec catégories
+                dédiées.
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-calendar-alt text-gray-700 text-xl"></i>
               </div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">Gestion d'événements</h3>
+              <h3 class="text-lg font-bold text-gray-900 mb-2">
+                Gestion d'événements
+              </h3>
               <p class="text-gray-600 text-sm">
                 Création, modification et affichage des événements à venir.
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-lock text-gray-700 text-xl"></i>
               </div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">Espace admin sécurisé</h3>
+              <h3 class="text-lg font-bold text-gray-900 mb-2">
+                Espace admin sécurisé
+              </h3>
               <p class="text-gray-600 text-sm">
                 Authentification JWT et gestion des droits d'administration.
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-mobile-alt text-gray-700 text-xl"></i>
               </div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">Responsive mobile-first</h3>
+              <h3 class="text-lg font-bold text-gray-900 mb-2">
+                Responsive mobile-first
+              </h3>
               <p class="text-gray-600 text-sm">
                 Interface optimisée pour smartphones, tablettes et desktop.
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-universal-access text-gray-700 text-xl"></i>
               </div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">Accessibilité AA</h3>
+              <h3 class="text-lg font-bold text-gray-900 mb-2">
+                Accessibilité AA
+              </h3>
               <p class="text-gray-600 text-sm">
-                Navigation clavier, contraste conforme et support lecteurs d'écran.
+                Navigation clavier, contraste conforme et support lecteurs
+                d'écran.
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-cogs text-gray-700 text-xl"></i>
               </div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">Architecture full-stack</h3>
+              <h3 class="text-lg font-bold text-gray-900 mb-2">
+                Architecture full-stack
+              </h3>
               <p class="text-gray-600 text-sm">
-                Frontend et API découplés pour une maintenance et évolution facilitées.
+                Frontend et API découplés pour une maintenance et évolution
+                facilitées.
               </p>
             </div>
           </div>
         </section>
 
         <section class="mb-12">
-          <h2 class="text-3xl font-bold text-gray-900 mb-6">Captures d'écran</h2>
+          <h2 class="text-3xl font-bold text-gray-900 mb-6">
+            Captures d'écran
+          </h2>
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 01</p>
-              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-01-home.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/ape/gallery/ape-01-home.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 02</p>
-              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-02-evenements.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/ape/gallery/ape-02-evenements.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 03</p>
-              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-03-actualites.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/ape/gallery/ape-03-actualites.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 04</p>
-              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-04-admin-dashboard.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/ape/gallery/ape-04-admin-dashboard.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 05</p>
-              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-05-admin-articles.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/ape/gallery/ape-05-admin-articles.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 06</p>
-              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-06-mobile.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/ape/gallery/ape-06-mobile.webp
+              </p>
             </div>
           </div>
           <p class="text-sm text-gray-500 mt-4 italic">
             <i class="fas fa-folder-open mr-1"></i>
-            Déposez vos captures dans <strong>images/projects/ape/gallery/</strong> en gardant ces noms de fichiers.
+            Déposez vos captures dans
+            <strong>images/projects/ape/gallery/</strong> en gardant ces noms de
+            fichiers.
           </p>
         </section>
 
@@ -289,7 +394,8 @@
           <h2 class="text-3xl font-bold text-gray-900 mb-6">Liens</h2>
           <p class="text-sm text-gray-500 italic">
             <i class="fas fa-info-circle mr-1"></i>
-            Projet associatif développé gratuitement — dépôt privé et accès démo sur demande.
+            Projet associatif développé gratuitement — dépôt privé et accès démo
+            sur demande.
           </p>
         </section>
       </div>
@@ -297,7 +403,9 @@
 
     <footer class="bg-slate-900 text-white py-8">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <p class="text-gray-400">&copy; 2025 Aurélien Thébault. Tous droits réservés.</p>
+        <p class="text-gray-400">
+          &copy; 2025 Aurélien Thébault. Tous droits réservés.
+        </p>
       </div>
     </footer>
 
