--- a/projects/climatserv17.html
+++ b/projects/climatserv17.html
@@ -326,34 +326,60 @@
             Captures d'écran
           </h2>
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 01</p>
-              <p class="text-xs text-gray-500">images/projects/climatserv/gallery/climatserv17-01-home.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/climatserv/gallery/climatserv17-01-home.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 02</p>
-              <p class="text-xs text-gray-500">images/projects/climatserv/gallery/climatserv17-02-services.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/climatserv/gallery/climatserv17-02-services.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 03</p>
-              <p class="text-xs text-gray-500">images/projects/climatserv/gallery/climatserv17-03-rdv.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/climatserv/gallery/climatserv17-03-rdv.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 04</p>
-              <p class="text-xs text-gray-500">images/projects/climatserv/gallery/climatserv17-04-contact.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/climatserv/gallery/climatserv17-04-contact.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 05</p>
-              <p class="text-xs text-gray-500">images/projects/climatserv/gallery/climatserv17-05-carte.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/climatserv/gallery/climatserv17-05-carte.webp
+              </p>
             </div>
-            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+            <div
+              class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300"
+            >
               <p class="text-sm font-semibold text-gray-700 mb-1">Slot 06</p>
-              <p class="text-xs text-gray-500">images/projects/climatserv/gallery/climatserv17-06-mobile.webp</p>
+              <p class="text-xs text-gray-500">
+                images/projects/climatserv/gallery/climatserv17-06-mobile.webp
+              </p>
             </div>
           </div>
           <p class="text-sm text-gray-500 mt-4 italic">
             <i class="fas fa-folder-open mr-1"></i>
-            Déposez vos captures dans <strong>images/projects/climatserv/gallery/</strong> en gardant ces noms de fichiers.
+            Déposez vos captures dans
+            <strong>images/projects/climatserv/gallery/</strong> en gardant ces
+            noms de fichiers.
           </p>
         </section>
 
