--- a/projects/zetoupanda.html
+++ b/projects/zetoupanda.html
@@ -14,10 +14,7 @@
     />
 
     <!-- Canonical URL -->
-    <link
-      rel="canonical"
-      href="https://auvielno.fr/projects/zetoupanda.html"
-    />
+    <link rel="canonical" href="https://auvielno.fr/projects/zetoupanda.html" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article" />
