--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@
                 <button
                   type="submit"
                   class="group relative w-full bg-gradient-to-r from-gray-500 to-gray-700 hover:from-gray-600 hover:to-gray-800 text-white font-semibold px-8 py-4 rounded-xl transition-all duration-300 shadow-lg shadow-gray-500/50 hover:shadow-2xl hover:shadow-gray-600/50 transform hover:-translate-y-1 overflow-hidden focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-slate-900"
-                  aria-label="Envoyer une demande de devis"
+                  aria-label="Envoyer une demande de contact"
                 >
                   <span class="relative z-10 flex items-center justify-center">
                     <i class="fas fa-paper-plane mr-2" aria-hidden="true"></i
@@ -1643,7 +1643,7 @@
     </button>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="script.js?v=20260223"></script>
 
     <!-- Gestion du consentement supprimée -->
   </body>
